[package]
authors = ["kazatsuyu <shirayama.kazatsuyu@gmail.com>"]
edition = "2018"
name = "sulafat"
version = "0.1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]

[dependencies]
serde = "1.0.118"
serde_cbor = "0.11.1"
serde_derive = "1.0.118"
wasm-bindgen = "0.2.69"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.6"

[dependencies.wee_alloc]
optional = true
version = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[features]
default = ["console_error_panic_hook"]
nightly-features = []

[lib]
crate-type = ["cdylib", "rlib"]
[profile.release]
opt-level = "s"
