[package]
authors = ["kazatsuyu <shirayama.kazatsuyu@gmail.com>"]
edition = "2018"
name = "sulafat-runtime-web"
version = "0.1.0"
description = "Web runtime for sulafat."
repository = "https://github.com/kazatsuyu/sulafat.git"
license = "(MIT OR Apache-2.0)"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]

[dependencies]
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4.20"
bincode = "1.3.1"

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.6"

[dependencies.wee_alloc]
optional = true
version = "0.4.5"

[dependencies.sulafat-vdom]
path = "../vdom"
features = ["export-css"]

[dependencies.sulafat-style]
path = "../style"
features = ["export-css"]

[dependencies.sulafat-macros]
path = "../macros"
features = ["export-css"]

[dev-dependencies]
wasm-bindgen-test = "0.3.20"

[features]
default = ["console_error_panic_hook"]
nightly-features = ["sulafat-vdom/nightly-features"]

[lib]
path = "rs/lib.rs"
crate-type = ["cdylib", "rlib"]
