[package]
name = "sulafat-style"
version = "0.1.0"
authors = ["kazatsuyu <shirayama.kazatsuyu@gmail.com>"]
edition = "2018"
description = "Styles for sulafat."
repository = "https://github.com/kazatsuyu/sulafat.git"
license = "(MIT OR Apache-2.0)"

[dependencies]
serde = "1.0.123"
serde_derive = "1.0.123"
base58 = "0.1.0"

[dependencies.sulafat-util]
path = "../util"

[features]
default = []
export-css = []

