[package]
name = "sulafat-util"
version = "0.1.0"
authors = ["kazatsuyu <shirayama.kazatsuyu@gmail.com>"]
edition = "2018"
description = "Utilities for sulafat."
repository = "https://github.com/kazatsuyu/sulafat.git"
license = "(MIT OR Apache-2.0)"

[dependencies]
serde = "1.0.123"
serde_derive = "1.0.123"
num = "0.3.1"
