[package]
name = "sulafat-vdom"
version = "0.1.0"
authors = ["kazatsuyu <shirayama.kazatsuyu@gmail.com>"]
edition = "2018"
description = "Virtual DOM implementation for sulafat."
repository = "https://github.com/kazatsuyu/sulafat.git"
license = "(MIT OR Apache-2.0)"

[lib]
path = "src/lib.rs"

[features]
default = []
nightly-features = []

[dependencies]
serde_derive = "1.0.118"
serde = "1.0.118"
num = "0.3.1"

[dependencies.sulafat-macros]
path = "../macros"

[dev-dependencies]
bincode = "1.3.1"
