[package]
name = "sulafat-vdom"
version = "0.1.0"
authors = ["kazatsuyu <shirayama.kazatsuyu@gmail.com>"]
edition = "2018"
description = "Virtual DOM implementation for sulafat."
repository = "https://github.com/kazatsuyu/sulafat.git"
license = "(MIT OR Apache-2.0)"

[lib]
path = "src/lib.rs"

[features]
default = []
nightly-features = []
export-css = [
    "sulafat-style/export-css",
    "sulafat-macros/export-css"
]

[dependencies]
serde_derive = "1.0.120"
serde = "1.0.120"
num = "0.3.1"

[dependencies.sulafat-macros]
path = "../macros"

[dependencies.sulafat-util]
path = "../util"

[dependencies.sulafat-style]
path = "../style"

[dev-dependencies]
bincode = "1.3.1"

[dev-dependencies.sulafat-vdom]
path = "."

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.46"
features = ["console"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.69"
